--- a/Klike/Sources/Controllers/Gallery/KLGalleryGridCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryGridCollectionViewCell.xib
@@ -12,7 +12,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="125" height="138"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="omn-B4-YtI">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="omn-B4-YtI">
                         <rect key="frame" x="0.0" y="0.0" width="125" height="138"/>
                     </imageView>
                 </subviews>
@@ -29,4 +29,7 @@
             <point key="canvasLocation" x="226.5" y="393"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="test_bg" width="1224" height="1632"/>
+    </resources>
 </document>
