fixed aspect ratio gallery

--- a/Klike/Sources/Controllers/Gallery/KLGalleryImageCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryImageCollectionViewCell.xib
@@ -12,7 +12,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="173" height="236"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-v0-Wv3">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-v0-Wv3">
                         <rect key="frame" x="0.0" y="0.0" width="173" height="236"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="236" id="CVD-J9-KQI"/>
