--- a/Klike/Sources/Controllers/Gallery/KLGalleryGridCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryGridCollectionViewCell.xib
@@ -12,7 +12,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="125" height="138"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="omn-B4-YtI">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="omn-B4-YtI">
                         <rect key="frame" x="0.0" y="0.0" width="125" height="138"/>
                     </imageView>
                 </subviews>
