--- a/Klike/Sources/Controllers/Gallery/KLGalleryViewController.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryViewController.xib
@@ -63,7 +63,7 @@
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9GC-sK-eUT">
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9GC-sK-eUT">
                             <rect key="frame" x="544" y="0.0" width="56" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="MLS-MI-U96"/>
