--- a/Klike/Sources/Controllers/Gallery/KLGalleryImageCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryImageCollectionViewCell.xib
@@ -12,7 +12,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="173" height="236"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-v0-Wv3">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-v0-Wv3" customClass="PFImageView">
                         <rect key="frame" x="0.0" y="0.0" width="173" height="236"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="236" id="CVD-J9-KQI"/>
@@ -38,7 +38,4 @@
             <point key="canvasLocation" x="12.5" y="216"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="test_bg" width="1224" height="1632"/>
-    </resources>
 </document>
