--- a/Klike/Sources/Controllers/KLEventGalleryCollectionViewCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCollectionViewCell.xib
@@ -12,7 +12,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="74" height="74"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1IY-AQ-fqz">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1IY-AQ-fqz" customClass="PFImageView">
                         <rect key="frame" x="1" y="1" width="72" height="72"/>
                     </imageView>
                 </subviews>
