--- a/Klike/Interfaces/FreePricingView.xib
+++ b/Klike/Interfaces/FreePricingView.xib
@@ -7,11 +7,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="bRK-ap-tCz" customClass="KLFreePricingView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="84"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7b-YK-Ydo">
-                    <rect key="frame" x="15" y="20" width="570" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7b-YK-Ydo">
+                    <rect key="frame" x="15" y="20" width="290" height="32"/>
                     <attributedString key="attributedText">
                         <fragment content="Your event is free to attend now. If you wish to accept payment for entry choose “Fixed Price”.">
                             <attributes>
@@ -24,14 +24,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_alert" translatesAutoresizingMaskIntoConstraints="NO" id="RUn-L0-ryQ">
-                    <rect key="frame" x="17" y="48" width="16" height="16"/>
+                    <rect key="frame" x="17" y="64" width="16" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="0c6-Dr-yoS"/>
                         <constraint firstAttribute="width" constant="16" id="zcj-I7-mx1"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZd-oi-xZs">
-                    <rect key="frame" x="36" y="48" width="548" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZd-oi-xZs">
+                    <rect key="frame" x="36" y="64" width="268" height="36"/>
                     <attributedString key="attributedText">
                         <fragment content="Once someone has accepted invite to your event you will be unable to change the pricing options.">
                             <attributes>
@@ -52,12 +52,12 @@
                 <constraint firstAttribute="trailing" secondItem="OZd-oi-xZs" secondAttribute="trailing" constant="16" id="VRz-Yp-pXY"/>
                 <constraint firstItem="OZd-oi-xZs" firstAttribute="leading" secondItem="RUn-L0-ryQ" secondAttribute="trailing" constant="3" id="YVV-BO-7Tg"/>
                 <constraint firstItem="U7b-YK-Ydo" firstAttribute="top" secondItem="bRK-ap-tCz" secondAttribute="top" constant="20" id="ZZE-1K-xDb"/>
-                <constraint firstAttribute="bottom" secondItem="OZd-oi-xZs" secondAttribute="bottom" constant="20" id="jbP-PG-XdZ"/>
+                <constraint firstAttribute="bottom" secondItem="OZd-oi-xZs" secondAttribute="bottom" priority="999" constant="20" id="jbP-PG-XdZ"/>
                 <constraint firstItem="RUn-L0-ryQ" firstAttribute="leading" secondItem="bRK-ap-tCz" secondAttribute="leading" constant="17" id="rQp-Fb-KTs"/>
                 <constraint firstItem="U7b-YK-Ydo" firstAttribute="leading" secondItem="bRK-ap-tCz" secondAttribute="leading" constant="15" id="ryt-73-Hok"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="442" y="162"/>
+            <point key="canvasLocation" x="444" y="180"/>
         </view>
     </objects>
     <resources>
