--- a/Klike/Interfaces/ThrowPricingView.xib
+++ b/Klike/Interfaces/ThrowPricingView.xib
@@ -7,7 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="gML-rT-b9g" customClass="KLThrowPricingView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="216"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="269"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68P-KY-fwj">
@@ -17,7 +17,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Minimum amount (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dmT-1C-4Ny">
-                    <rect key="frame" x="40" y="5" width="544" height="59"/>
+                    <rect key="frame" x="40" y="5" width="264" height="59"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="59" id="pK3-fL-pFV"/>
                     </constraints>
@@ -25,7 +25,7 @@
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Qc-dz-dzh">
-                    <rect key="frame" x="41" y="64" width="559" height="1"/>
+                    <rect key="frame" x="41" y="64" width="279" height="1"/>
                     <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="bcX-e5-R9y"/>
@@ -38,15 +38,15 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Suggested amount (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nXr-zA-EbG">
-                    <rect key="frame" x="40" y="64" width="544" height="55"/>
+                    <rect key="frame" x="40" y="64" width="264" height="55"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="sXl-su-xp8"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOG-LD-jao">
-                    <rect key="frame" x="15" y="132" width="570" height="32"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOG-LD-jao">
+                    <rect key="frame" x="15" y="132" width="290" height="64"/>
                     <attributedString key="attributedText">
                         <fragment>
                             <string key="content">Payments will be accepted in a day after the start of your event then we’ll payout to your bank account 2 business days later. Klike takes a 2% comission for processing. </string>
@@ -67,14 +67,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_alert" translatesAutoresizingMaskIntoConstraints="NO" id="seH-hR-r52">
-                    <rect key="frame" x="16" y="179" width="16" height="16"/>
+                    <rect key="frame" x="16" y="211" width="16" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="0x2-NW-mTv"/>
                         <constraint firstAttribute="width" constant="16" id="1vu-MT-jI8"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPn-QX-MFd">
-                    <rect key="frame" x="36" y="180" width="549" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPn-QX-MFd">
+                    <rect key="frame" x="36" y="212" width="269" height="37"/>
                     <attributedString key="attributedText">
                         <fragment content="Once someone has accepted invite to your event you will be unable to change the pricing options.">
                             <attributes>
@@ -87,7 +87,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xLZ-0S-xA2">
-                    <rect key="frame" x="41" y="119" width="559" height="1"/>
+                    <rect key="frame" x="41" y="119" width="279" height="1"/>
                     <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="FEG-O9-bE1"/>
@@ -106,7 +106,7 @@
                 <constraint firstItem="cOG-LD-jao" firstAttribute="top" secondItem="xLZ-0S-xA2" secondAttribute="bottom" constant="12" id="PZB-Ml-3Li"/>
                 <constraint firstItem="oew-mE-Agw" firstAttribute="leading" secondItem="gML-rT-b9g" secondAttribute="leading" constant="20" id="PfF-hm-Fhb"/>
                 <constraint firstAttribute="trailing" secondItem="nXr-zA-EbG" secondAttribute="trailing" constant="16" id="S29-vv-tIP"/>
-                <constraint firstAttribute="bottom" secondItem="nPn-QX-MFd" secondAttribute="bottom" constant="20" id="ZAj-mA-rQ3"/>
+                <constraint firstAttribute="bottom" secondItem="nPn-QX-MFd" secondAttribute="bottom" priority="999" constant="20" id="ZAj-mA-rQ3"/>
                 <constraint firstAttribute="trailing" secondItem="nPn-QX-MFd" secondAttribute="trailing" constant="15" id="cfQ-aH-eZq"/>
                 <constraint firstAttribute="trailing" secondItem="xLZ-0S-xA2" secondAttribute="trailing" id="dRk-a0-AHW"/>
                 <constraint firstItem="dmT-1C-4Ny" firstAttribute="leading" secondItem="68P-KY-fwj" secondAttribute="trailing" constant="11" id="fWC-cp-5QL"/>
@@ -127,7 +127,7 @@
                 <outlet property="minimalAmaountInput" destination="dmT-1C-4Ny" id="BMK-GG-GHI"/>
                 <outlet property="suggestedAmount" destination="nXr-zA-EbG" id="2f4-yT-8Ud"/>
             </connections>
-            <point key="canvasLocation" x="224" y="86"/>
+            <point key="canvasLocation" x="224" y="112.5"/>
         </view>
     </objects>
     <resources>
